# flamapp-ai-assignment

./: .gitignore  README.md  WINDOWS.md  create_repo.sh  test.txt
android/: README_ANDROID.md
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/flamapp/: MainActivity.java  NativeBridge.java
android/app/src/main/jni/: CMakeLists.txt  native-lib.cpp
docs/: architecture.md
web/: package.json  tsconfig.json
web/src/: index.html  index.ts  worker.ts
